# macos_tts_to_device

./: .coveragerc  README.md  cli.py  gui.py  main.py  main_bark.py  main_say.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  settings.py
.github/workflows/: tests.yml
src/: __init__.py  history.py  manager.py  profiles.py  tts_bark.py  tts_base.py  tts_say.py  utils.py
src/engines/: __init__.py  bark.py  piper.py  say.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_gui.py  test_settings.py  test_tts_bark.py  test_tts_base.py  test_tts_say.py
