[project]
name = "macos-tts-to-device"
version = "0.1.0"
description = "Route text-to-speech audio to specific output devices on macOS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.5.1",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
# Install with: uv pip install .[bark]
bark = [
    "suno-bark @ git+https://github.com/suno-ai/bark.git",
]

# Install everything with: uv pip install .[all]
all = [
    "suno-bark @ git+https://github.com/suno-ai/bark.git",
]

[project.scripts]
macos-tts = "main:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
