[project]
name = "macos-tts-to-device"
version = "0.1.0"
description = "Route text-to-speech audio to specific output devices on macOS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "sounddevice>=0.5.1",
    "soundfile>=0.12.1",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]

# Install with: uv pip install .[bark]
bark = [
    "suno-bark @ git+https://github.com/suno-ai/bark.git",
]

# Install with: uv pip install .[piper]
piper = [
    "piper-tts>=1.3.0",
]

# Install everything with: uv pip install .[all]
all = [
    "suno-bark @ git+https://github.com/suno-ai/bark.git",
    "piper-tts>=1.3.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]

[project.scripts]
macos-tts-cli = "cli:main"
macos-tts-gui = "gui:main"
macos-tts = "cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["cli.py", "gui.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
